# playground

./: .gitignore
base/: CMakeLists.txt
base/src/: cin.cpp  cout.cpp  cstrings.cpp  get.cpp  getline.cpp  structure.cpp
base/src/func/: arrarg.cpp  arrarg2.cpp  arrarg3.cpp  arrarg4.cpp  calling.cpp  lotto.cpp  protos.cpp  strback.cpp  strfun.cpp  stringFunc.cpp  structureFun.cpp  structureFun2.cpp  structurePtr.cpp  twoarg.cpp
base/src/pointer/: addpntrs.cpp  address.cpp  arraynew.cpp  delete.cpp  pointer.cpp  ptrstr.cpp  ptrstrct.cpp  use_new.cpp
fast/: CMakeLists.txt
fast/src/20/: concepts.cpp
fast/src/basicOper/: bit.cpp
fast/src/cast/: constCast.cpp  cstyle.cpp  dynamicCast.cpp  reinterpretCast.cpp  staticCast.cpp
fast/src/complex/: array.cpp  rangefor.cpp  structure.cpp  union.cpp
fast/src/exception/: noexcept.cpp  raii.cpp  tradition.cpp  tryCatch.cpp  tryCatch2.cpp  tryCatch3.cpp
fast/src/function/: agreementCallingFunc.cpp  argFunc.cpp  callByReference.cpp  callByReference2.cpp  callByReference3.cpp  callByValue.cpp  callByValue2.cpp  defaultArg.cpp  functionPointer.cpp  functionPointer2.cpp  functionPointer3.cpp  inline.cpp  overloading.cpp  recursive.cpp  treeNode.cpp
fast/src/inheritance/abstract/: main.cpp
fast/src/inheritance/base/: main.cpp  main3.cpp
fast/src/inheritance/multiple/: main.cpp  main2.cpp
fast/src/inheritance/staticDynamicBind/: main.cpp  main2.cpp
fast/src/inheritance/virtualFunction/: main.cpp  main2.cpp  main3.cpp
fast/src/modern/: async.cpp  auto1.cpp  auto2.cpp  constexpr.cpp  decltype1.cpp  futurePromise.cpp  lambda.cpp  packagedTask.cpp  rvallval.cpp  rvalueReferenceMove.cpp  smartPointerShared.cpp  smartPointerUnique.cpp  stdFunction.cpp  stdThread.cpp  stdThread2.cpp  stdThread3.cpp
fast/src/oper/: bit2.cpp  bit3.cpp  bit4.cpp
fast/src/operation/: friend.cpp  overloadingOperation.cpp
fast/src/operation/comparison/: overloadingComparison.cpp
fast/src/operation/comparison/includes/: Comparison.h
fast/src/operation/comparison/libs/: Comparison.cpp
fast/src/operation/conversion/: main.cpp
fast/src/operation/conversion/includes/: Conversion.h
fast/src/operation/conversion/libs/: Conversion.cpp
fast/src/operation/function/: main.cpp
fast/src/operation/function/includes/: Function.h
fast/src/operation/function/libs/: Function.cpp
fast/src/operation/hashtable/: main.cpp
fast/src/operation/hashtable/includes/: Hashtable.h
fast/src/operation/hashtable/libs/: Hashtable.cpp
fast/src/operation/io/: main.cpp
fast/src/operation/logical/: overloadingLogical.cpp
fast/src/operation/subscript/: main.cpp
fast/src/operation/substitutionCopy/: main.cpp
fast/src/pointer/: double.cpp  dynamicPtr.cpp  nullPtr.cpp  pointer.cpp  ptrArr.cpp  ptrStr.cpp  ref.cpp  vector.cpp  voidPtr.cpp
fast/src/stdio/: cin.cpp  cinFlush.cpp  cinFlush2.cpp  cinboolalpha.cpp  cout.cpp  printf.cpp  scanf.cpp  scanfFlush.cpp  scanfInput.cpp
fast/src/stl/: algorithm.cpp  algorithm2.cpp  orderedAssociateContainer.cpp  orderedAssociateContainer2.cpp  orderedAssociateContainer3.cpp  sequenceContainer.cpp  sequenceContainer2.cpp  unorderedAssociateContainer.cpp
fast/src/stl/iterator/: iterator.cpp  iterator2.cpp
fast/src/template/: classTemplate.cpp  funcTemplate.cpp  metaprogramming.cpp  specializationTemplate.cpp  specificTemplate.cpp  swap.cpp  swap.h  variableArgument.cpp
fast/src/type/: rtti.cpp  typetraits.cpp  typetraits2.cpp
foundation/clz10/v1/: CMakeLists.txt  main.cpp  test.cpp
foundation/clz10/v1/includes/: stock00.h  test.h
foundation/clz10/v1/libs/: CMakeLists.txt  stock00.cpp
foundation/clz10/v3/: CMakeLists.txt  main.cpp  usestok2.cpp
foundation/clz10/v3/includes/: stock20.h
foundation/clz10/v3/libs/: CMakeLists.txt  stock20.cpp
foundation/clz10/v4/: CMakeLists.txt  stacker.cpp
foundation/clz10/v4/includes/: stack.h
foundation/clz10/v4/libs/: CMakeLists.txt  stack.cpp
foundation/clz12/v2/: CMakeLists.txt  main.cpp  saying2.cpp
foundation/clz12/v2/includes/: string1.h
foundation/clz12/v2/libs/: CMakeLists.txt  string1.cpp
foundation/clz13/v2/: CMakeLists.txt  main.cpp
foundation/clz13/v2/includes/: tabtenn0.h
foundation/clz13/v2/libs/: tabtenn0.cpp
foundation/clz14/v5/: CMakeLists.txt  main.cpp  tempparm.cpp
foundation/clz14/v5/includes/: stacktp.h
foundation/clz14/v5/libs/: CMakeLists.txt  stacktp.cpp
foundation/clz15/err/v6/: CMakeLists.txt  use_sales.cpp
foundation/fri15/v2/: CMakeLists.txt
foundation/fri15/v2/libs/: CMakeLists.txt  tv.cpp
foundation/stan16/v2/: CMakeLists.txt  copyit.cpp  inserts.cpp  list.cpp  multimap.cpp  setops.cpp
foundation/stream17/v1/: CMakeLists.txt  defaults.cpp  fill.cpp  manip.cpp  precise.cpp  setf.cpp  setf2.cpp  showpt.cpp  width.cpp  write.cpp
foundation/stream17/v2/: CMakeLists.txt  check_it.cpp  cinexcp.cpp  get_fun.cpp  peeker.cpp  truncate.cpp
fun/compile/: CMakeLists.txt  file1.cpp
fun/compile/includes/: coordin.h
fun/compile/libs/: CMakeLists.txt  file2.cpp
fun/dstrc/: CMakeLists.txt  arr.cpp  array.cpp  dequeue.cpp  map.cpp  pairtuple.cpp  priorityq.cpp  queue.cpp  set.cpp  sort.cpp  stack.cpp  vector.cpp
fun/dstrc/struct/: struct.cpp
fun/function/: 01_default_parameter.cpp  02_overloading.cpp  03_template1.cpp  04_templateOverloading.cpp  05_explicitSpecialization.cpp  06_tempalteArgument.cpp  07_metaprogramming.cpp  CMakeLists.txt  arr.cpp
fun/namespace/: CMakeLists.txt  usenmsp.cpp
fun/namespace/includes/: namesp.h
fun/namespace/libs/: CMakeLists.txt  namesp.cpp
fun/template/clz/: CMakeLists.txt  main.cpp
fun/template/clz/includes/: Queue.h
lecture/: a.out  build.txt  (+3 more)
pack/: CMakeLists.txt  foo.cpp  main.cpp
pack/includes/: shape.h
pack/libs/: CMakeLists.txt  shape.cpp
re/inheritance/: CMakeLists.txt
re/inheritance/abstract/: main.cpp
re/inheritance/accessModifier/: main.cpp
re/inheritance/base/: main.cpp  main2.cpp
re/inheritance/multiple/: main.cpp  main2.cpp
re/inheritance/staticDynamicBind/: main.cpp  main2.cpp
re/inheritance/virtualFunc/: main.cpp  main2.cpp  main3.cpp
(+444 files in other folders)
