cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

add_executable(cout src/cout.cpp)
add_executable(cstrings src/cstrings.cpp)
add_executable(cin src/cin.cpp)
add_executable(getline src/getline.cpp)
add_executable(get src/get.cpp)
add_executable(structure src/structure.cpp)

add_executable(address src/pointer/address.cpp)
add_executable(pointer src/pointer/pointer.cpp)
add_executable(use_new src/pointer/use_new.cpp)
add_executable(arraynew src/pointer/arraynew.cpp)
add_executable(addpntrs src/pointer/addpntrs.cpp)
add_executable(ptrstr src/pointer/ptrstr.cpp)
add_executable(ptrstrct src/pointer/ptrstrct.cpp)
add_executable(delete src/pointer/delete.cpp)

add_executable(calling src/func/calling.cpp)
add_executable(protos src/func/protos.cpp)
add_executable(twoarg src/func/twoarg.cpp)
add_executable(lotto src/func/lotto.cpp)
add_executable(arrarg src/func/arrarg.cpp)
add_executable(arrarg2 src/func/arrarg2.cpp)
add_executable(arrarg3 src/func/arrarg3.cpp)
add_executable(arrarg4 src/func/arrarg4.cpp)
add_executable(strfun src/func/strfun.cpp)
add_executable(strback src/func/strback.cpp)
add_executable(structureFun src/func/structureFun.cpp)
add_executable(structureFun2 src/func/structureFun2.cpp)
add_executable(structurePtr src/func/structurePtr.cpp)
add_executable(stringFunc src/func/stringFunc.cpp)