cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 14)

add_executable(printf src/stdio/printf.cpp)
add_executable(scanf src/stdio/scanf.cpp)
add_executable(scanfFlush src/stdio/scanfFlush.cpp)
add_executable(scanfInput src/stdio/scanfInput.cpp)

add_executable(cout src/stdio/cout.cpp)
add_executable(cin src/stdio/cin.cpp)
add_executable(cinFlush src/stdio/cinFlush.cpp)
add_executable(cinFlush2 src/stdio/cinFlush2.cpp)
add_executable(cinboolalpha src/stdio/cinboolalpha.cpp)

add_executable(bit src/basicOper/bit.cpp)
add_executable(bit2 src/basicOper/bit2.cpp)
add_executable(bit3 src/basicOper/bit3.cpp)
add_executable(bit4 src/basicOper/bit4.cpp)

add_executable(structure src/complex/structure.cpp)
add_executable(union src/complex/union.cpp)
add_executable(array src/complex/array.cpp)
add_executable(rangefor src/complex/rangefor.cpp)

add_executable(pointer src/pointer/pointer.cpp)
add_executable(ptrArr src/pointer/ptrArr.cpp)
add_executable(ptrStr src/pointer/ptrStr.cpp)
add_executable(dynamicPtr src/pointer/dynamicPtr.cpp)
add_executable(nullPtr src/pointer/nullPtr.cpp)
add_executable(voidPtr src/pointer/voidPtr.cpp)
add_executable(vector src/pointer/vector.cpp)
add_executable(ref src/pointer/ref.cpp)
add_executable(double src/pointer/double.cpp)

add_executable(func src/function/argFunc.cpp)
add_executable(recursive src/function/recursive.cpp)
add_executable(treeNode src/function/treeNode.cpp)
add_executable(callByValue src/function/callByValue.cpp)
add_executable(callByValue2 src/function/callByValue2.cpp)
add_executable(callByReference src/function/callByReference.cpp)
add_executable(callByReference2 src/function/callByReference2.cpp)
add_executable(callByReference3 src/function/callByReference3.cpp)
add_executable(defaultArg src/function/defaultArg.cpp)
add_executable(overloading src/function/overloading.cpp)
add_executable(functionPointer src/function/functionPointer.cpp)
add_executable(functionPointer2 src/function/functionPointer2.cpp)
add_executable(functionPointer3 src/function/functionPointer3.cpp)
add_executable(agreementCallingFunc src/function/agreementCallingFunc.cpp)
add_executable(inline src/function/inline.cpp)


add_executable(build src/build/build.cpp)
add_library(sumLib src/build/sum.cpp)
target_link_libraries(build sumLib)

add_executable(ext src/build/ext.cpp)
add_library(ext2 src/build/ext2.cpp)
target_link_libraries(ext ext2)

add_executable(hello src/obj/hello.cpp)
add_executable(basiClass src/obj/basicClass.cpp)
add_executable(constructor src/obj/constructor.cpp)
add_executable(destructor src/obj/destructor.cpp)
add_executable(destructor2 src/obj/destructor2.cpp)

add_executable(protoDefine src/obj/prototypeAndDefinition/protoDefine.cpp)
add_library(personLib src/obj/prototypeAndDefinition/libs/Person.cpp)
add_library(villageLib src/obj/prototypeAndDefinition/libs/Village.cpp)
include_directories(src/obj/prototypeAndDefinition/includes)
target_link_libraries(protoDefine personLib villageLib)

add_executable(this src/obj/this.cpp)
add_executable(this2 src/obj/this2.cpp)
add_executable(const src/obj/const.cpp)
add_executable(staticMember src/obj/staticMember.cpp)

add_executable(static src/obj/staticMember/main.cpp)
include_directories(src/obj/staticMember/includes)
add_library(StaticLib src/obj/staticMember/libs/Static.cpp)
target_link_libraries(static StaticLib)

add_executable(memberFunctionPointer src/obj/memberFunctionPointer.cpp)

add_executable(overloadingOperation src/operation/overloadingOperation.cpp)
add_executable(friend src/operation/friend.cpp)

add_executable(overloadingComparison src/operation/comparison/overloadingComparison.cpp)
add_library(compareLib src/operation/comparison/libs/Comparison.cpp)
include_directories(src/operation/comparison/includes)
target_link_libraries(overloadingComparison compareLib)

add_executable(overloadingLogical src/operation/logical/overloadingLogical.cpp)
add_library(logicalLib src/operation/logical/libs/Logical.cpp)
include_directories(src/operation/logical/includes)
target_link_libraries(overloadingLogical logicalLib)

add_executable(overloadingIO src/operation/io/main.cpp)
add_library(ioLib src/operation/io/libs/Io.cpp)
include_directories(src/operation/io/includes)
target_link_libraries(overloadingIO ioLib)

add_executable(overlaodingSubscript src/operation/subscript/main.cpp)
add_library(subscriptLib src/operation/subscript/libs/Subscript.cpp)
add_library(stringLib src/operation/subscript/libs/String.cpp)
include_directories(src/operation/subscript/includes)
target_link_libraries(overlaodingSubscript subscriptLib stringLib)

add_executable(hashtable src/operation/hashtable/main.cpp)
add_library(hashtableLib src/operation/hashtable/libs/Hashtable.cpp)
include_directories(src/operation/hashtable/includes)
target_link_libraries(hashtable hashtableLib)

add_executable(substitutionCopy src/operation/substitutionCopy/main.cpp)
add_library(substitutionCopyLib src/operation/substitutionCopy/libs/SubstitutionCopy.cpp)
include_directories(src/operation/substitutionCopy/includes)
target_link_libraries(substitutionCopy substitutionCopyLib)

add_executable(conversion src/operation/conversion/main.cpp)
add_library(conversionLib src/operation/conversion/libs/Conversion.cpp)
include_directories(src/operation/conversion/includes)
target_link_libraries(conversion conversionLib)

add_executable(function src/operation/function/main.cpp)
add_library(functionLib src/operation/function/libs/Function.cpp)
include_directories(src/operation/function/includes)
target_link_libraries(function functionLib)