add_executable(pairtuple.cpp pairtuple.cpp)
add_executable(sort.cpp sort.cpp)
add_executable(vector.cpp vector.cpp)
add_executable(array.cpp array.cpp)
add_executable(arr.cpp arr.cpp)
add_executable(map.cpp map.cpp)
add_executable(set.cpp set.cpp)
add_executable(stack.cpp stack.cpp)
add_executable(queue.cpp queue.cpp)
add_executable(dequeue.cpp dequeue.cpp)
add_executable(struct struct/struct.cpp)
add_executable(priorityq.cpp priorityq.cpp)