add_executable(basicInheritance1 base/main.cpp)
add_executable(basicInheritance2 base/main2.cpp)
add_executable(basicInheritance3 base/main3.cpp)

add_executable(inheritance abstract/main.cpp)

add_executable(accessModifier accessModifier/main.cpp)

add_executable(multiple1 multiple/main.cpp)
add_executable(multiple2 multiple/main2.cpp)

add_executable(staticDynamicBind1 staticDynamicBind/main.cpp)
add_executable(staticDynamicBind2 staticDynamicBind/main2.cpp)

add_executable(virtualFunc1 virtualFunc/main.cpp)
add_executable(virtualFunc2 virtualFunc/main2.cpp)
add_executable(virtualFunc3 virtualFunc/main3.cpp)